<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/bottom_home" />

    <item
        android:id="@+id/page_search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/bottom_searach" />

    <item
        android:id="@+id/page_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_sharp_favorite_24"
        android:title="@string/bottom_favorite" />
    <item
        android:id="@+id/page_my"
        android:enabled="true"
        android:icon="@drawable/ic_outline_person_outline_24"
        android:title="@string/bottom_my" />

</menu>