<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="recent"
            type="kr.co.openit.digitaltwin.tablinghw.model.Recent" />

        <variable
            name="listener"
            type="kr.co.openit.digitaltwin.tablinghw.view.BaseRecyclerView.OnItemClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="@{(v) -> listener.onItemClick(recent)}"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mv_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ll_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_restaurant"
                setImages="@{recent.thumbnail}"
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|start"
                android:background="@drawable/radius2"
                android:gravity="center"
                android:visibility="@{recent.useWaiting? View.VISIBLE:View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/mv_restaurant"
                app:layout_constraintStart_toStartOf="@+id/mv_restaurant">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_wait"
                    android:textColor="@color/white"
                    android:textSize="13dp"

                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mv_restaurant"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_classification"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@{recent.classification}" />

            <TextView
                android:id="@+id/tv_restaurantName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@{recent.restaurantName}"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_star_24"
                    android:backgroundTint="#FFD400"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_restaurant"
                    app:layout_constraintEnd_toStartOf="@+id/tv_count"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="@+id/tv_classification"
                    app:layout_constraintTop_toBottomOf="@+id/tv_restaurantName"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_count"
                    color="@{`#808080`}"
                    originalText="@{recent.rating +` (`+recent.upTo300()+`) `+ recent.summaryAddress}"
                    partText="@{recent.summaryAddress}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_start"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@+id/iv_start"
                    app:layout_constraintTop_toTopOf="@+id/iv_start" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="@{recent.isQuickBooking || recent.isRemoteWaiting? View.VISIBLE : View.GONE}">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="#f0f1f5"
                    android:visibility="@{recent.isRemoteWaiting? View.VISIBLE : View.GONE}"
                    app:cardCornerRadius="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/remote_line_up"
                        android:textColor="#7f8999"
                        android:textSize="12dp" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="#f0f1f5"
                    android:visibility="@{recent.isQuickBooking? View.VISIBLE : View.GONE}"
                    app:cardCornerRadius="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/reservation"
                        android:textColor="#7f8999"
                        android:textSize="12dp" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>